cluster/generated/website/website.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    goldilocks.fairwinds.com/vpa-update-mode: auto
  name: website
spec: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: website
  name: website
  namespace: website
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: website
  template:
    metadata:
      labels:
        app.kubernetes.io/name: website
    spec:
      automountServiceAccountToken: false
      containers:
        - image: nginxinc/nginx-unprivileged:1.31-alpine
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          name: nginx
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
          resources:
            limits:
              cpu: 100m
              memory: 192Mi
            requests:
              cpu: 10m
              memory: 16Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: html
      volumes:
        - configMap:
            name: website-content
          name: html
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: website
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: website
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: website
  namespace: website
spec:
  hostnames:
    - www.allegedly.works
    - allegedly.works
  parentRefs:
    - name: cluster-gateway
      namespace: gateway-system
  rules:
    - backendRefs:
        - name: website
          port: 80
